# github_actions_experiment

./: .gitignore  README.md  action.yml  package-lock.json  package.json
.github/workflows/: check-dist.yml  codeql-analysis.yml  test.yml
composite_action/: action.yml  run.sh
docker_action/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
js_action/: action.yml  package-lock.json  package.json  tsconfig.json
py_docker/: Dockerfile  action.yml  entrypoint.sh
py_docker/src/: main.py
